<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#EEEEEE">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/home_top_bg">
                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/logo"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="BahirBet@bahir.org"
                        android:textColor="#ffffff"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="215dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp">
                        <android.support.v7.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation = "vertical">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <ImageView
                                    android:layout_width="70dp"
                                    android:layout_height="70dp"
                                    android:layout_centerInParent="true"
                                    android:id="@+id/img1"
                                    android:src="@drawable/football"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/img1"
                                    android:layout_alignParentBottom="true"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="0dp"
                                    android:layout_marginBottom="0dp"
                                    android:text="@string/football"
                                    android:gravity="center"
                                    android:textSize="20dp" />
                                <Button
                                    android:onClick="openfootBall"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:id="@+id/btn1"
                                    android:background="@android:color/transparent"/>

                            </RelativeLayout>

                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation = "vertical">
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <ImageView

                                    android:layout_width="70dp"
                                    android:layout_height="70dp"
                                    android:layout_centerInParent="true"
                                    android:src="@drawable/basketball"
                                    android:id="@+id/img2" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/img2"
                                    android:layout_alignParentBottom="true"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="0dp"
                                    android:layout_marginBottom="0dp"
                                    android:text="@string/basket_ball"
                                    android:textSize="20dp"
                                    android:gravity="center"/>
                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:id="@+id/btn2"
                                    android:background="@android:color/transparent"/>

                            </RelativeLayout>

                        </android.support.v7.widget.CardView>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp">
                        <android.support.v7.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation = "vertical">
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <ImageView
                                    android:layout_width="70dp"
                                    android:layout_height="70dp"
                                    android:layout_centerInParent="true"
                                    android:src="@drawable/bicycle"
                                    android:id="@+id/img3"
                                    />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/img3"
                                    android:layout_alignParentBottom="true"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="0dp"
                                    android:layout_marginBottom="5dp"
                                    android:gravity="center"
                                    android:text="@string/cycling"
                                    android:textSize="20dp" />
                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:id="@+id/btn3"
                                    android:background="@android:color/transparent"/>

                            </RelativeLayout>

                        </android.support.v7.widget.CardView>
                        <android.support.v7.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation = "vertical"
                            >
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <ImageView
                                    android:layout_width="70dp"
                                    android:layout_height="70dp"
                                    android:layout_centerInParent="true"
                                    android:id="@+id/img4"
                                    android:src="@drawable/tennis"
                                    />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/img4"
                                    android:layout_alignParentBottom="true"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="0dp"
                                    android:layout_marginBottom="5dp"
                                    android:text="@string/tennis"
                                    android:textSize="20dp" />
                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:id="@+id/btn4"
                                    android:background="@android:color/transparent"/>

                            </RelativeLayout>

                        </android.support.v7.widget.CardView>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="135dp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp">
                        <android.support.v7.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation = "vertical"
                            >
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <ImageView
                                    android:src="@drawable/baseball"
                                    android:layout_width="70dp"
                                    android:layout_height="70dp"
                                    android:layout_centerInParent="true"
                                    android:id="@+id/img5"
                                    />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/img5"
                                    android:layout_alignParentBottom="true"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="0dp"
                                    android:layout_marginBottom="0dp"
                                    android:text="@string/base_ball"
                                    android:gravity="center"
                                    android:textSize="20dp" />
                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:id="@+id/btn5"
                                    android:background="@android:color/transparent"/>

                            </RelativeLayout>

                        </android.support.v7.widget.CardView>
                        <android.support.v7.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation = "vertical"
                            >
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <ImageView
                                    android:src="@drawable/volleyball"
                                    android:layout_width="70dp"
                                    android:layout_height="70dp"
                                    android:layout_centerInParent="true"
                                    android:id="@+id/img6"
                                    />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/img6"
                                    android:layout_alignParentBottom="true"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="0dp"
                                    android:gravity="center"
                                    android:layout_marginBottom="0dp"
                                    android:text="@string/volley_ball"
                                    android:textSize="20dp" />
                                <Button
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:id="@+id/btn6"
                                    android:background="@android:color/transparent"/>

                            </RelativeLayout>

                        </android.support.v7.widget.CardView>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>