<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MatchDetailFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.FloatingActionButton
        android:onClick="add_bet"
        android:id="@+id/add_bet_fab"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_centerInParent="true"

        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"

        android:backgroundTint="@android:color/transparent"
        android:foreground="@drawable/add_btn"
        android:foregroundTint="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#EEEEEE">



                <LinearLayout
                    android:id="@+id/myRalative"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@drawable/home_top_bg">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <ImageView
                            android:id="@+id/club_home_logo"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@mipmap/ic_launcher"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginLeft="50dp"
                            android:layout_marginBottom="2dp"/>

                        <TextView
                            android:id="@+id/vs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="12dp"
                            android:text="@string/vs"
                            android:textColor="#ffffff"
                            android:textSize="32sp"
                            android:textStyle="bold" />
                        <ImageView
                            android:id="@+id/club_away_logo"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@mipmap/ic_launcher"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginRight="50dp"
                            android:layout_marginBottom="2dp"/>
                    </RelativeLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="150dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="0dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="50dp"
                            android:text="@string/home"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:text="@string/draw"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:id="@+id/textdraw"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="50dp"
                            android:text="@string/away"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioGroup

                            android:id="@+id/radio_group_main"
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="40dp"
                            android:layout_marginRight="50dp"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radio_btn_home"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="2.5x"
                                android:textSize="18sp" />

                            <RadioButton

                                android:id="@+id/radio_btn_draw"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:text="1.2x"
                                android:textSize="18sp" />

                            <RadioButton
                                android:id="@+id/radio_btn_away"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="3dp"
                                android:text="4.3x"
                                android:textSize="18sp" />


                        </RadioGroup>




                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="other betting" />

                    </RelativeLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="0dp"

                    android:gravity="center_horizontal"
                    android:orientation="vertical">


                </LinearLayout>

                <ScrollView

                    android:background="@drawable/otherbet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/myRalative"
                    android:layout_marginTop="210dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="240dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="0dp"

                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                    </LinearLayout>

                </ScrollView>


            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>

</android.support.constraint.ConstraintLayout>



    <!--&lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;-->
    <!--<TextView-->
        <!--android:id="@+id/textView2"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:text="worked "-->
        <!--android:textSize="40dp"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

    <!--<ImageView-->
        <!--android:id="@+id/imageContainer"-->
        <!--android:layout_width="120dp"-->
        <!--android:layout_height="120dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.498"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/textView2" />-->
